--- a/My_Bank/My_Bank/Views/Create_Account.xaml
+++ b/My_Bank/My_Bank/Views/Create_Account.xaml
@@ -1,16 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="My_Bank.Create_Account">
+             x:Class="My_Bank.Create_Account"
+             xmlns:viewModels="clr-namespace:My_Bank.ViewModels"
+    <ContentPage.BindingContext>
+        <viewModels:AuthViewModel/>
+    </ContentPage.BindingContext>
     <ContentPage.Content>
         <StackLayout Padding="30,30,30,30">
-            <Label Text="Name: "/>
-            <Entry Placeholder="Enter your name..."/>
+            <Label Text="First Name: "/>
+            <Entry Text="{Binding _user.firstName}" Placeholder="Enter your first name..."/>
+            <Label Text="Last Name: "/>
+            <Entry Text="{Binding _user.lastName}" Placeholder="Enter your last name..."/>
             <Label Text="Email: "/>
-            <Entry Placeholder="Enter your email address..."/>
+            <Entry Text="{Binding _user.emailAddress}" Placeholder="Enter your email address..."/>
             <Label Text="Password:"/>
-            <Entry Placeholder="Enter a password..."/>
-            <Button Text="Create Account"/>
+            <Entry Text="{Binding _user.password}" Placeholder="Enter a password..."/>
+            <Button Text="Create Account" Command="{Binding RegisterCommand}"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
